# weather_report

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.json  config.json.template  entrypoint.sh  k8s.yml
src/: config.rs  geocoder.rs  lib.rs  main.rs  reporter.rs  server.rs
src/provider/: mod.rs  open_weather_map.rs  yandex.rs
src/reporter/: reducer.rs
tests/testsuite/: forecast_test.rs  generic_api_test.rs  main.rs
tests/testsuite/support/: mod.rs  shared_responses.rs  test_server_client.rs
