[package]
name = "weather_report"
version = "0.1.0"
authors = ["Timofey Martynov <feymartynov@gmail.com>"]
edition = "2018"

[dependencies]
iron = "0.6"
router = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.4"
reqwest = "0.9"
simple-error = "0.1"
chrono = { version = "0.4", features = ["serde"] }
percent-encoding = "1.0"
futures = "0.1"
lazy_static = "1.3"
